[gd_scene load_steps=15 format=3 uid="uid://1mj1gaxxk77"]

[ext_resource type="Script" uid="uid://cknf7286vjlas" path="res://skeleton.gd" id="1_vd5x3"]
[ext_resource type="Shader" uid="uid://2auxmwafr4ty" path="res://Scenes/flicker.gdshader" id="2_pegji"]
[ext_resource type="Texture2D" uid="uid://bbp4a8iil6mf8" path="res://graphics/Enemies/skeleton walk 2x1.png" id="3_5abox"]
[ext_resource type="Texture2D" uid="uid://yvq52hgd3thf" path="res://graphics/Enemies/skeleton stand 2x1.png" id="3_pegji"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_v8sxu"]
resource_local_to_scene = true
shader = ExtResource("2_pegji")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/amount = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_5abox"]
atlas = ExtResource("3_pegji")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_v8sxu"]
atlas = ExtResource("3_pegji")
region = Rect2(17, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ks230"]
atlas = ExtResource("3_5abox")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_shq1q"]
atlas = ExtResource("3_5abox")
region = Rect2(17, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_xbfmp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5abox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v8sxu")
}],
"loop": true,
"name": &"stand",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ks230")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_shq1q")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_q1wii"]
radius = 6.0
height = 18.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lw4xn"]
size = Vector2(12, 3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_clg8n"]
size = Vector2(1, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pxjam"]
size = Vector2(1, 1)

[node name="Skeleton" type="Area2D"]
collision_layer = 4
collision_mask = 18
script = ExtResource("1_vd5x3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_v8sxu")
position = Vector2(1, -4)
sprite_frames = SubResource("SpriteFrames_xbfmp")
animation = &"stand"
autoplay = "walk"
frame_progress = 0.07084095

[node name="hitbox" type="CollisionShape2D" parent="."]
position = Vector2(1, -4)
shape = SubResource("CapsuleShape2D_q1wii")

[node name="BorderArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BorderArea2D"]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_lw4xn")

[node name="RightCliffArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightCliffArea"]
position = Vector2(5, 5)
shape = SubResource("RectangleShape2D_clg8n")

[node name="LeftCliffArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftCliffArea"]
position = Vector2(-3, 5)
shape = SubResource("RectangleShape2D_pxjam")

[node name="HealthBar" type="ProgressBar" parent="."]
modulate = Color(1, 0, 0, 1)
offset_left = -8.0
offset_top = -10.0
offset_right = 28.0
offset_bottom = -4.0
scale = Vector2(0.5, 0.5)
show_percentage = false

[node name="regin_timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="BorderArea2D" to="." method="_on_border_area_2d_body_entered"]
[connection signal="body_exited" from="RightCliffArea" to="." method="_on_right_cliff_area_body_exited"]
[connection signal="body_exited" from="LeftCliffArea" to="." method="_on_left_cliff_area_body_exited"]
